force-app/main/default/objects/MPSectorByBusinessUnit__c/MPSectorByBusinessUnit__c.object-meta.xml
<CustomObject>
    <label>Rubro por Unidad de Negocio</label>
    <nameField>
        <displayFormat>SBU-{000000}</displayFormat>
        <label>Sector By Business Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rubros por Unidad de Negocio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>