force-app/main/default/objects/MPSectorByBusinessUnit__c/fields/MPAMD__c.field-meta.xml
<CustomField>
    <fullName>MPAMD__c</fullName>
    <label>AMD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>