force-app/main/default/objects/MPSectorByBusinessUnit__c/fields/MPAnnexC__c.field-meta.xml
<CustomField>
    <fullName>MPAnnexC__c</fullName>
    <label>Annex C</label>
    <length>50</length>
    <type>Text</type>
</CustomField>