force-app/main/default/objects/MPSectorByBusinessUnit__c/fields/MPAP__c.field-meta.xml
<CustomField>
    <fullName>MPAP__c</fullName>
    <label>AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>