force-app/main/default/objects/MPSectorByBusinessUnit__c/fields/MPSector__c.field-meta.xml
<CustomField>
    <fullName>MPSector__c</fullName>
    <label>Rubro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPBusinessType__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Rubro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPBusinessType__c</referenceTo>
    <relationshipLabel>Unidades de Negocio</relationshipLabel>
    <relationshipName>SectorsByBusinessUnit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>